# comfyui-custom-node-clash-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  strict_nodes.csv  summary.txt
data/: nodes_inventory.json  nodes_snapshot_20250424_234025.json
notebooks/: 00_get_node_data.ipynb  01_generate_reports.ipynb
outputs/: clash_probability_by_pkg.csv  major_clash_pairs.csv  major_version_clashes.csv  strict_packs_with_major_clash.csv  strict_pins.csv  top_impactful_clashes.csv
src/clash_utils/: clash_probability.py  comfy_node_utils.py  major_version_clash.py  strict_pin_audit.py  top_impactful_clashes.py
